--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,34 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FragmentStateSwipeViewActivity" />
-        <activity android:name=".FragmentSwipeViewActivity"></activity>
+        <activity
+            android:name=".Activity.FragmentStateSwipeViewActivity"
+            android:label="Fragment State Swipe View" />
+        <activity
+            android:name=".Activity.FragmentSwipeViewActivity"
+            android:label="Fragment Swipe View" />
+        <activity
+            android:name=".Activity.SwipeViewWithTabsActivity"
+            android:label="Swipe With Tabs" />
+        <activity
+            android:name=".Activity.DrawerActivity"
+            android:label="Drawer" />
+        <activity
+            android:name=".Activity.UpActivity"
+            android:label="Up"
+            android:parentActivityName=".Activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activity.MainActivity" />
+        </activity>
+        <activity android:name=".Activity.FragmentBackActivity"></activity>
     </application>
 
 </manifest>
